First pass at merging changes from other system.

--- a/templates/add_config.html
+++ b/templates/add_config.html
@@ -14,6 +14,7 @@
     <p>{{ form.geopoint_field.label }}  {{ form.geopoint_field(size=40) }}</p>
     <p>{{ form.timestamp_field.label }}  {{ form.timestamp_field(size=40) }}</p>
     <p>{{ form.category_field.label }}  {{ form.category_field(size=40) }}</p>
+    <p>{{ form.justification_field.label }}  {{ form.justification_field(size=40) }}</p>
     <p>{{ form.submit() }}</p>
 </form>
 {% endblock %}
