--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,9 @@
     </head>
     <body>
         <h2>DataShader Tile Map Server</h2>    
-        <a href="/index">Home</a> |   
-        <a href="/display_config">Display Config</a>  |  
-        <a href="/add_config">Add Config</a>    
+        <a href="./index">Home</a> |   
+        <a href="./display_config">Display Config</a>  |  
+        <a href="./add_config">Add Config</a>    
         <hr>
         {% block content %}{% endblock %}
     </body>
