Add hashed cache invalidation and update parameters

--- a/templates/display_config.html
+++ b/templates/display_config.html
@@ -11,7 +11,8 @@
     <th>Map Name</th>
     <th>Index</th>
     <th>Mode</th>
-    <th>Date Range</th>
+    <th>From Time</th>
+    <th>To Time</th>
     <th>Geopoint Field</th>
     <th>Timestamp Field</th>
     <th>Category Field</th>
@@ -24,7 +25,8 @@
     <td>{{ name }}</td>
     <td>{{ c.get('idx') }}</td>
     <td>{{ c.get('mode') }}</td>
-    <td>{{ c.get('date_range') }}</td>
+    <td>{{ c.get('from_time') }}</td>
+    <td>{{ c.get('to_time') }}</td>
     <td>{{ c.get('geopoint_field') }}</td>
     <td>{{ c.get('timestamp_field') }}</td>
     <td>{{ c.get('category_field') }}</td>
