Add in layer/hash tracking and legends

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,8 @@
     <body>
         <h2>DataShader Tile Map Server</h2>    
         <a href="./index">Home</a> |   
-        <a href="./display_config">Display Config</a>  |  
-        <a href="./add_config">Add Config</a>    
+        <a href="./layers">Layers</a> |   
+        <a href="./index_config">Index Config</a>  |  
         <hr>
         {% block content %}{% endblock %}
     </body>
