--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,7 @@
     </head>
     <body>
         <h2>DataShader Tile Map Server</h2>    
-        <a href="./index">Home</a> |   
-        <a href="./layers">Layers</a> |   
-        <a href="./index_config">Index Config</a>  |  
+        <a href="./index">Home</a> | Total Cache Size {{ cache_size }} | Clean Cache <a href="./age_cache?age=3600">1hr</a> <a href="./age_cache?age=300">5min</a>
         <hr>
         {% block content %}{% endblock %}
     </body>
