feat: Auto-refresh dev ui pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <html>
     <head>
       <title>DataShader Tile Map Server</title>
+      <meta http-equiv="refresh" content="60" >
     </head>
     <body>
         <h2>DataShader Tile Map Server</h2>    
